fixed child element issue by moving the div element(portfolio item image) so it wrapped the image element which now allows for the styling to be applied

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -5,6 +5,21 @@
   gap: 2.5rem;
 }
 
-.portfolio__items {
-  background: var(--color-bg-variant)
+.portfolio__item {
+  background: var(--color-bg-variant);
+  padding: 1.2rem;
+  border-radius: 2rem;
+  border: 1px solid transparent;
+  transition: var(--transition);
+}
+
+.portfolio__item:hover {
+  border-color: var(--color-primary-variant);
+  /* background: transparent; */
+  background: var(--color-white);
+}
+
+.portfolio__item-image img{
+  border-radius: 1rem;
+
 }
